--- a/src/main/resources/static/confirmation.html
+++ b/src/main/resources/static/confirmation.html
@@ -13,7 +13,7 @@
     </div>
     <nav>
       <ul>
-        <li class="current"><a href="/resources">Resources</a></li>
+        <li class="current"><a href="/overview.html">Resources</a></li>
       </ul>
     </nav>
   </div>
