--- a/src/main/resources/static/overview.html
+++ b/src/main/resources/static/overview.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
             <ul>
-                <li class="current"><a href="/">Resources</a></li>
+                <li class="current"><a href="overview.html">Resources</a></li>
             </ul>
         </nav>
     </div>
