--- a/src/main/resources/static/confirmation.html
+++ b/src/main/resources/static/confirmation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Server Resources Monitoring</title>
+  <title>Monitoring Console</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
 </head>
