--- a/src/main/resources/static/overview.html
+++ b/src/main/resources/static/overview.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Server Resources Monitoring</title>
+    <title>Monitoring Console</title>
 
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
