--- a/src/main/resources/static/overview.html
+++ b/src/main/resources/static/overview.html
@@ -11,11 +11,11 @@
 <header>
     <div class="container">
         <div id="branding">
-            <h1 style="color: black">Server Resources Monitoring</h1>
+            <h1 style="color: #5f5f61;">Server Resources Monitoring</h1>
         </div>
         <nav>
             <ul>
-                <li class="current"><a href="overview.html">Resources</a></li>
+                <li class="current" style="color: #5f5f61"><a href="overview.html">Resources</a></li>
             </ul>
         </nav>
     </div>
@@ -24,29 +24,30 @@
 <div class="container">
     <!-- Server Information Card -->
     <div class="container">
-        <div class="card" id="tomcatStatus">
+        <div class="card" id="clickable">
             <i class="fas fa-cat"></i>
-            <h2>Tomcat Status: </h2>
+            <a href="/tomcatInfo.html"><h2>Tomcat Status:</h2></a>
             <p id="tomcatStatusText">Loading...</p>
             <div id="runningApplications">
-                <h3>Running Applications</h3>
+                <h3 >Deployed Applications</h3>
                 <ul id="runningAppsList"></ul>
             </div>
-            <div id="notRunningApplications">
-                <h3>Dead Applications</h3>
-                <ul id="notRunningAppsList"></ul>
-            </div>
-            <a href="/tomcatInfo.html" class="button">Go to detail</a>
+        </div>
+
+        <div class="card" id="dockerContainers">
+            <i class="fa fa-whale"></i>
+            <h2>Docker:</h2>
+            <ul id="dockerContainerList"></ul>
         </div>
 
         <!-- Additional cards for disk and memory usage -->
         <div class="card" id="diskUsage">
-            <h2>Disk Usage:</h2>
+            <h2 >Disk Usage:</h2>
             <ul id="diskUsageList"></ul>
         </div>
 
         <div class="card" id="freeMemory">
-            <h2>Memory Usage:</h2>
+            <h2 >Memory Usage:</h2>
             <ul id="freeMemoryList"></ul>
         </div>
     </div>
