--- a/src/main/resources/static/overview.html
+++ b/src/main/resources/static/overview.html
@@ -40,9 +40,9 @@
         <div id="diskUsageList"></div>
     </section>
 
-    <section class="card" id="freeMemory">
+    <section class="card table-container" id="freeMemory">
         <h2>Memory Usage:</h2>
-        <ul id="freeMemoryList"></ul>
+        <div id="freeMemoryList"></div>
     </section>
 </main>
 
