added login form

--- a/src/main/resources/static/confirmation.html
+++ b/src/main/resources/static/confirmation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
 <head>
   <title>Monitoring Console</title>
   <link rel="stylesheet" href="css/styles.css">
