--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link type="text/css" rel="stylesheet" href="./index.css" />
-    <title>Console</title>
-</head>
-<body>
-<h1>Login</h1>
-<form method="POST" action="/login">
-    <table>
-        <tr>
-            <td><label for="username">Username:</label></td>
-            <td><input type="text" id="username" name="username" class="red-border" /></td>
-        </tr>
-        <tr>
-            <td><label for="password">Password:</label></td>
-            <td><input type="password" name="password" id="password" class="red-border" /></td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td><input type="submit" value="Login" class="red-border" /></td>
-        </tr>
-    </table>
-</form>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <link type="text/css" rel="stylesheet" href="./index.css" />-->
+<!--    <title>Console</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Login</h1>-->
+<!--<form method="POST" action="/login">-->
+<!--    <table>-->
+<!--        <tr>-->
+<!--            <td><label for="username">Username:</label></td>-->
+<!--            <td><input type="text" id="username" name="username" class="red-border" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td><label for="password">Password:</label></td>-->
+<!--            <td><input type="password" name="password" id="password" class="red-border" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>&nbsp;</td>-->
+<!--            <td><input type="submit" value="Login" class="red-border" /></td>-->
+<!--        </tr>-->
+<!--    </table>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
